--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Assasins's Creed animation</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   </head>
-  <body>
+  <body style="background-color: black">
 
     <!-- Include JavaScript dependencies -->
     <script type="text/javascript" src="./target/scala-2.12/simplegame-jsdeps.js"></script>
